# HuggingFaceInferenceAPIProject

./: .gitignore  README.md  idm_vton_example.ipynb  pyproject.toml
src/: .env  config.py  example_1.py  example_2.py
